# YTMusic-DL

./: .gitignore  GITHUB_ACTIONS_SETUP.md  GITHUB_PUSH_INSTRUCTIONS.md  README.md  __init__.py  app.py  build.sh  build_apk.bat  build_apk.sh  build_windows.bat  config.py  downloader.py  flet-build.toml  main.py  push_to_github.sh  pyproject.toml  queue_manager.py  requirements.txt  search.py  settings.py  ui.py  utils.py
.github/workflows/: README.md  build-android.yml  cache-deps.yml  release.yml  test.yml
static/js/: app.js
templates/: index.html
ytmusic_dl/: README.md  pubspec.yaml
ytmusic_dl/android/: gradle.properties
ytmusic_dl/android/app/: build.gradle.kts  proguard-rules.pro
ytmusic_dl/android/app/src/main/: AndroidManifest.xml
ytmusic_dl/android/app/src/main/kotlin/com/ytmusic/ytmusic_dl/: MainActivity.kt
ytmusic_dl/lib/: main.dart
ytmusic_dl/lib/core/constants/: app_constants.dart
ytmusic_dl/lib/core/theme/: app_theme.dart
ytmusic_dl/lib/core/utils/: formatters.dart
ytmusic_dl/lib/data/datasources/: database_helper.dart  media_scanner.dart
ytmusic_dl/lib/data/models/: media_item.dart  playlist.dart
ytmusic_dl/lib/presentation/providers/: library_provider.dart  player_provider.dart  settings_provider.dart
ytmusic_dl/lib/presentation/screens/: home_screen.dart  main_screen.dart  player_screen.dart  settings_screen.dart
ytmusic_dl/lib/presentation/widgets/: media_list_tile.dart  mini_player.dart  section_header.dart
ytmusic_dl/test/: widget_test.dart
